@@ -1,181 +1,178 @@
+use std::ops::{Index, IndexMut};
 use vst::buffer::{Inputs, Outputs};
 
-pub trait InputAudioChannel<'a, T> {
-    fn slice(&'a self) -> &'a [T];
-}
-
-pub trait OutputAudioChannel<'a, T> {
-    fn slice(&'a mut self) -> &'a mut[T];
-}
-
-impl<'a, T> InputAudioChannel<'a, T> for &'a [T] {
-    fn slice(&'a self) -> &'a [T] {
-        self
-    }
-}
-
-impl<'a, T> OutputAudioChannel<'a, T> for &'a mut[T] {
-    fn slice(&'a mut self) -> &'a mut [T] {
-        self
-    }
-}
-
-pub trait InputAudioChannelGroup<'a, C, T>: Sized
-    where C: InputAudioChannel<'a, T>,
+pub trait InputAudioChannelGroup<T> : Sized + Index<usize, Output=[T]>
 {
-    fn len(&self) -> usize;
-    fn get(&self, index: usize) -> Option<C>;
-    fn split_at(&self, index: usize) -> (Self, Self);
+    fn number_of_channels(&self) -> usize;
+    fn channel_length(&self) -> usize;
+    fn get(&self, index: usize) -> Option<&[T]>;
+    fn split_at(self, channel_index: usize) -> (Self, Self);
 }
 
-pub trait OutputAudioChannelGroup<'a, 'b, C, T>: Sized
-    where C: OutputAudioChannel<'a, T>,
+pub trait OutputAudioChannelGroup<T>: Sized + IndexMut<usize, Output=[T]>
 {
-    fn len(&self) -> usize;
-    fn get_mut(&'b mut self, index: usize) -> Option<C>;
-    fn split_at_mut(&'a mut self, index: usize) -> (Self, Self);
+    fn number_of_channels(&self) -> usize;
+    fn channel_length(&self) -> usize;
+    fn get_mut(&mut self, index: usize) -> Option<&mut [T]>;
+    fn split_at_mut(self, channel_index: usize) -> (Self, Self);
 }
 
-impl<'a, T:'a> InputAudioChannelGroup<'a, &'a [T], T> for Inputs<'a, T> {
-    fn len(&self) -> usize {
+impl<'a, T:'a> InputAudioChannelGroup<T> for Inputs<'a, T> {
+    fn number_of_channels(&self) -> usize {
         Inputs::len(self)
     }
 
-    fn get(&self, index: usize) -> Option<&'a [T]> {
-        if index < self.len() {
+    fn channel_length(&self) -> usize {
+        if self.number_of_channels() > 0 {
+            Inputs::get(self, 0).len()
+        } else {
+            0
+        }
+    }
+
+    fn get(&self, index: usize) -> Option<&[T]> {
+        if index < self.number_of_channels() {
             Some(&Inputs::get(self, index))
         } else {
             None
         }
     }
 
-    fn split_at(&self, index: usize) -> (Self, Self) {
-        Inputs::split_at(self, index)
+    fn split_at(self, index: usize) -> (Self, Self) {
+    	// Takes `self` byvalue, not strictly necessary, only to be
+    	// consistent with the `split_at_mut`.
+        Inputs::split_at(&self, index)
     }
 }
 
-impl<'a, T: 'a> OutputAudioChannelGroup<'a, 'a, &'a mut [T], T> for Outputs<'a, T> {
-    fn len(&self) -> usize {
+impl<'a, T: 'a> OutputAudioChannelGroup<T> for Outputs<'a, T> {
+    fn number_of_channels(&self) -> usize {
         Outputs::len(self)
     }
 
-    fn get_mut(&'a mut self, index: usize) -> Option<&'a mut [T]> {
-        if index < self.len() {
+    fn channel_length(&self) -> usize {
+        if self.number_of_channels() > 0 {
+            Outputs::get(self, 0).len()
+        } else {
+            0
+        }
+    }
+
+    fn get_mut(&mut self, index: usize) -> Option<&mut [T]> {
+        if index < self.number_of_channels() {
             Some(Outputs::get_mut(self, index))
         } else {
             None
         }
     }
 
-    fn split_at_mut(&mut self, index: usize) -> (Self, Self) {
+    fn split_at_mut(self, index: usize) -> (Self, Self) {
         Outputs::split_at_mut(self, index)
     }
 }
 
 #[cfg(feature="jack-backend")]
 mod jack_backend {
-    use jack::{Port, AudioIn, AudioOut, ProcessScope, Client, ClosureProcessHandler, ClientOptions, Control};
+    use jack::{Port, AudioIn, AudioOut, ProcessScope};
+    #[cfg(test)]
+    use jack::{Client, ClosureProcessHandler, ClientOptions, Control};
 
     use super::{
-        InputAudioChannel,
-        OutputAudioChannel,
         InputAudioChannelGroup,
         OutputAudioChannelGroup
     };
 
-    struct AudioInWrapper<'ps> {
-        ps: &'ps ProcessScope,
-        audio_in: Port<AudioIn>
+    struct JackInputs<'ps, 'p> {
+        process_scope: &'ps ProcessScope,
+        audio_in_ports: &'p [Port<AudioIn>]
     }
 
-    impl<'ps> InputAudioChannel<'ps, f32> for &'ps AudioInWrapper<'ps> {
-        fn slice(&'ps self) -> &'ps [f32]{
-            self.audio_in.as_slice(&self.ps)
-        }
+
+    struct JackOutputs<'ps, 'p> {
+        process_scope: &'ps ProcessScope,
+        audio_out_ports: &'p mut [Port<AudioOut>]
     }
 
-    struct AudioOutWrapper<'ps> {
-        ps: &'ps ProcessScope,
-        audio_out: &'ps mut Port<AudioOut>
-    }
-
-    impl<'g, 'ps> OutputAudioChannel<'ps, f32> for &'g mut AudioOutWrapper<'ps> {
-        fn slice(&'ps mut self) -> &'ps mut [f32] {
-            self.audio_out.as_mut_slice(&self.ps)
-        }
-    }
-
-    struct JackInputAudioChannelGroup<'ps> {
-        channels: &'ps [AudioInWrapper<'ps>]
-    }
-
-    impl<'ps> InputAudioChannelGroup<'ps, &'ps AudioInWrapper<'ps>, f32> for JackInputAudioChannelGroup<'ps>
+    impl<'ps, 'p> InputAudioChannelGroup<f32> for JackInputs<'ps, 'p>
     {
-        fn len(&self) -> usize {
-            self.channels.len()
+        fn number_of_channels(&self) -> usize {
+            self.audio_in_ports.len()
         }
 
-        fn get(&self, index: usize) -> Option<&'ps AudioInWrapper<'ps>> {
-            self.channels.get(index)
+        fn channel_length(&self) -> usize {
+            self.process_scope.n_frames() as usize
         }
 
-        fn split_at(&self, index: usize) -> (Self, Self) {
-            let (first_channels, last_channels) = self.channels.split_at(index);
-            let first = JackInputAudioChannelGroup {
-                channels: first_channels
+        fn get(&self, index: usize) -> Option<&[f32]> {
+            if let Some(channel) = self.audio_in_ports.get(index) {
+                Some(channel.as_slice(&self.process_scope))
+            } else {
+                None
+            }
+        }
+
+        fn split_at(self, index: usize) -> (Self, Self) {
+            let (first_channels, last_channels) = self.audio_in_ports.split_at(index);
+            let first = JackInputs {
+                process_scope: self.process_scope,
+                audio_in_ports: first_channels
             };
-            let last = JackInputAudioChannelGroup {
-                channels: last_channels
-            };
-            (first, last)
-        }
-    }
-
-    struct JackOutputAudioChannelGroup<'g, 'ps> where 'ps: 'g{
-        channels: &'g mut [AudioOutWrapper<'ps>]
-    }
-
-    impl<'g, 'ps> OutputAudioChannelGroup<'ps, 'g, &'g mut AudioOutWrapper<'ps>, f32> for JackOutputAudioChannelGroup<'g, 'ps> where 'ps: 'g{
-        fn len(&self) -> usize {
-            self.channels.len()
-        }
-
-        fn get_mut(&'g mut self, index: usize) -> Option<&'g mut AudioOutWrapper<'ps>> {
-            self.channels.get_mut(index)
-        }
-
-        fn split_at_mut(&'g mut self, index: usize) -> (Self, Self) {
-            let (first_channels, last_channels) = self.channels.split_at_mut(index);
-            let first = JackOutputAudioChannelGroup {
-                channels: first_channels
-            };
-            let last = JackOutputAudioChannelGroup {
-                channels: last_channels
+            let last = JackInputs {
+                process_scope: self.process_scope,
+                audio_in_ports: last_channels
             };
             (first, last)
         }
     }
 
-    // Is in fact a test.
-    fn test_synth() {
+
+    impl<'ps, 'p> OutputAudioChannelGroup<f32> for JackOutputs<'ps, 'p> {
+        fn number_of_channels(&self) -> usize {
+            self.audio_out_ports.len()
+        }
+
+        fn channel_length(&self) -> usize {
+            self.process_scope.n_frames() as usize
+        }
+
+        fn get_mut(&mut self, index: usize) -> Option<&mut [f32]> {
+            if let Some(channel) = self.audio_out_ports.get_mut(index) {
+                Some(channel.as_mut_slice(&self.process_scope))
+            } else {
+                None
+            }
+        }
+
+        fn split_at_mut(self, index: usize) -> (JackOutputs<'ps, 'p>, JackOutputs<'ps, 'p>) {
+            let (first_channels, last_channels) = self.audio_out_ports.split_at_mut(index);
+            let first = JackOutputs {
+                process_scope: self.process_scope,
+                audio_out_ports: first_channels
+            };
+            let last = JackOutputs {
+                process_scope: self.process_scope,
+                audio_out_ports: last_channels
+            };
+            (first, last)
+        }
+    }
+
+    #[test]
+    #[ignore]
+    fn using_jack_client_compiles() {
         let (client, _status) =
             Client::new("client", ClientOptions::NO_START_SERVER).unwrap();
 
-        let mut out_port = client
+        let out_port = client
             .register_port("out", AudioOut::default())
             .unwrap();
+        let mut out_ports = vec![out_port];
         let cback = move |_: &Client, ps: &ProcessScope| -> Control {
-            let out_wrapper = AudioOutWrapper{
-                ps: ps,
-                audio_out: &mut out_port
+            let mut jack_outputs = JackOutputs{
+                process_scope: ps,
+                audio_out_ports: &mut out_ports
             };
-            let mut wrapper_group = vec![out_wrapper];
-            let mut group = JackOutputAudioChannelGroup {
-                channels: &mut wrapper_group
-            };
-            let channel = group.get_mut(0).unwrap();
-            // TODO: Fix compile error when uncommenting the next line.
-//            let _slice : &mut[f32] = channel.slice();
+            let _slice = jack_outputs.get_mut(0).unwrap();
             Control::Continue
         };
         let _active_client = client
